{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 15,
  "lineage": "99430869-2da0-07da-9533-1e6c3ff3c75f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-fronted-sec-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:security-group/sg-0f6acd7791adf173e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6acd7791adf173e",
            "ingress": [],
            "name": "default",
            "owner_id": "720843601896",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01f2c1c9edbf77e98"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-public-sec-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:security-group/sg-0cc85f8c24291097d",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc85f8c24291097d",
            "ingress": [],
            "name": "default",
            "owner_id": "720843601896",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06341f53af9143362"
          },
          "dependencies": [
            "aws_vpc.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fronted-internet-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0870e2fc799fcd440",
            "owner_id": "720843601896",
            "tags": {
              "Environment": "default",
              "Name": "frontend-internet-gateway"
            },
            "vpc_id": "vpc-01f2c1c9edbf77e98"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public-internet-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-003f3df266ed34889",
            "owner_id": "720843601896",
            "tags": {
              "Environment": "default",
              "Name": "public-internet-gateway"
            },
            "vpc_id": "vpc-06341f53af9143362"
          },
          "dependencies": [
            "aws_vpc.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:security-group/sg-09d5bda719759b48e",
            "description": "allow-all-inbound",
            "egress": [],
            "id": "sg-09d5bda719759b48e",
            "ingress": [],
            "name": "allow-all-inbound",
            "name_prefix": null,
            "owner_id": "720843601896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "Name": "allow-all-inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f2c1c9edbf77e98"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-all-inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1964968743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09d5bda719759b48e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-all-inbound",
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:subnet/subnet-09a3bb9da4408ae01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.128.0.0/24",
            "id": "subnet-09a3bb9da4408ae01",
            "map_public_ip_on_launch": false,
            "owner_id": "720843601896",
            "tags": {
              "Environment": "default",
              "Name": "frontend-subnet-a"
            },
            "vpc_id": "vpc-01f2c1c9edbf77e98"
          },
          "dependencies": [
            "aws_vpc.frontend-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:subnet/subnet-057e1925af326f03c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.254.0.0/24",
            "id": "subnet-057e1925af326f03c",
            "map_public_ip_on_launch": false,
            "owner_id": "720843601896",
            "tags": {
              "Environment": "default",
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-06341f53af9143362"
          },
          "dependencies": [
            "aws_vpc.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "frontend-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:vpc/vpc-01f2c1c9edbf77e98",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.128.0.0/16",
            "default_network_acl_id": "acl-04424c216dce09115",
            "default_route_table_id": "rtb-0a2b7804171251a68",
            "default_security_group_id": "sg-0f6acd7791adf173e",
            "dhcp_options_id": "dopt-a446dfc0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01f2c1c9edbf77e98",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a2b7804171251a68",
            "owner_id": "720843601896",
            "tags": {
              "Environment": "default",
              "Name": "frontend-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "public-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:vpc/vpc-06341f53af9143362",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.254.0.0/16",
            "default_network_acl_id": "acl-0bf3570fa838df861",
            "default_route_table_id": "rtb-0ecd927632ddcbeeb",
            "default_security_group_id": "sg-0cc85f8c24291097d",
            "dhcp_options_id": "dopt-a446dfc0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06341f53af9143362",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ecd927632ddcbeeb",
            "owner_id": "720843601896",
            "tags": {
              "Environment": "default",
              "Name": "public-vpc"
            }
          }
        }
      ]
    }
  ]
}